# solar_optical_concentrator

./: CMakeLists.txt  README.md
include/: aabb.hpp  common.hpp  humanreadable_chrono_duration.hpp  intersect.hpp  mirrors.hpp  octree.hpp  primitives.hpp  print_progress.hpp  random_generator.hpp  range.hpp  ray.hpp  raytracer.hpp  serializer.hpp  thread_pool.hpp
src/: main.cpp  random_generator.cpp  raytracer.cpp
